--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2032,11 +2032,11 @@ pre code {
 
 .form-control {
   display: block;
-  width: 500
+  width: 100%
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  font-weight: 100;
+  font-weight: 100%;
   line-height: 1.5;
   color: blue;
   background-color: transparent;
@@ -6563,8 +6563,8 @@ a.close.disabled {
   box-sizing: content-box;
   -ms-flex: 0 1 auto;
   flex: 0 1 auto;
-  width: 30px;
-  height: 3px;
+  width: 00px;
+  height: 10px;
   margin-right: 3px;
   margin-left: 3px;
   text-indent: -999px;
