--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2036,7 +2036,7 @@ pre code {
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  font-weight: 100%;
+  font-weight: 200;
   line-height: 1.5;
   color: blue;
   background-color: transparent;
