--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -60,7 +60,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: #C0C0C0;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -239,6 +239,7 @@ textarea {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
+  border-radius: 30px;
   line-height: inherit;
 }
 
@@ -363,10 +364,18 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
+  color:black;
+  background-color:	#4F4F4F ;
+  padding: 1;
   font-size: 2.5rem;
+  font-weight:900;
+  font-family: 'Times New Roman', Times, serif,arial;
+  border-radius: 30px;
+  radius:30px;
 }
 
 h2, .h2 {
+  color: blue;
   font-size: 2rem;
 }
 
@@ -431,7 +440,7 @@ small,
 mark,
 .mark {
   padding: 0.2em;
-  background-color: #fcf8e3;
+  background-color: #fff;
 }
 
 .list-unstyled {
@@ -2032,17 +2041,18 @@ pre code {
 
 .form-control {
   display: block;
-  width: 100%
+  width: 580;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
+  font-family: 'Times New Roman', Times, serif;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 500;
   line-height: 1.5;
-  color: blue;
-  background-color: transparent;
+  color: rgb(248, 248, 250);
+  background-color:#F8F8FF;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  border-radius: 0.25rem;
+  border-radius: 10px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
