--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -364,7 +364,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
-  color:black;
+  color:white;
   background-color:	#4F4F4F ;
   padding: 1;
   font-size: 2.5rem;
